Giraph Change Log

Release 0.2.0 - unreleased
  GIRAPH-500: Refactor job launch code out of graph package and into job package (ereisman)

  GIRAPH-493: Remove EdgeWithSource (nitay)

  GIRAPH-429: Number of input split threads set to 1 less than necessary (majakabiljo)
  
  GIRAPH-498: We should check input splits status from zookeeeper once per worker, 
  not once per split thread (majakabiljo)

  GIRAPH-497: Limiting number of open requests doesn't work with multithreading (majakabiljo via ereisman)

  GIRAPH-461: Convert static assignment of in-memory partitions with LRU cache (claudio)

  GIRAPH-494: Make Edge an interface (nitay)

  GIRAPH-492: Saving vertices has no status report, making it hard to 
  find DFS issues (aching)

  GIRAPH-312: Giraph needs an admin script (ereisman)

  GIRAPH-469: Refactor GraphMapper (ereisman)

  GIRAPH-491: Observer for job lifecycle (nitay)

  GIRAPH-490: Constants for GiraphStats / GiraphTimers (nitay)

  GIRAPH-488: ArrayOutOfBoundsException in org.apache.giraph.worker.InputSplitPathOrganizer (ereisman)

  GIRAPH-418: Create maven profile for CDH 4.1.2 (ekoontz)

  GIRAPH-487: VertexInputPath in GiraphRunner refers to EdgeInputPath (taguan via apresta)

  GIRAPH-481: mvn compile error when building jar file - Error with Accumulo (tavoaqp via nitay)

  GIRAPH-472: Refactor MapFunctions enum to be more general (ereisman)

  GIRAPH-254: Constant Variable name misspelled in HashMasterPartitioner.java (Gustavo Salazar Torres via ereisman)

  GIRAPH-431: Support edge and vertex value input formats in GiraphRunner (apresta)

  GIRAPH-477: Fetching locality info in InputSplitPathOrganizer causes jobs to hang (apresta via ereisman)

  GIRAPH-459: Group Vertex Mutations by Partition ID (claudio)

  GIRAPH-473: InputSplitPathOrganizer should be aware of multiple threads (apresta via ereisman)

  GIRAPH-478: Bring back jar-with-deps for giraph-hcatalog (nitay)
